# msgpack-aggr-server

./: CMakeLists.txt  Doxyfile.in  README.md
scripts/: build.sh  poormans-build.sh  test.sh  valgrind-test.sh
src/: error.h  hashtable.c  hashtable.h  input.c  input.h  main.c  protocol.c  protocol.h
test/: generator.py  test-server.py  test1.in  test1.out  test2.in  test2.out  test3.in  test3.out
